# open-paws-policy-watch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/src/: __init__.py  classifier.py  drafter.py  models.py  monitor.py  notifier.py  scorer.py
docs/: jurisdictions.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: AlertFeed.tsx  BillCard.tsx  BillDashboard.tsx  ContactRep.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/bill/: [id].tsx
